Ghost behavior change + z-index fix

--- a/src/app/features/characters/npc/npc.component.scss
+++ b/src/app/features/characters/npc/npc.component.scss
@@ -5,7 +5,7 @@
     max-width: 20%;
     max-height: 20%;
     aspect-ratio: 1;
-    transition: top var(--transition-duration) ease-in, left var(--transition-duration) ease-in;
+    transition: top var(--transition-duration) var(--transition-timing-function), left var(--transition-duration) var(--transition-timing-function);
     pointer-events: none;
 
     .marker {
