--- a/src/app/features/game-view/win-screen/win-screen.component.scss
+++ b/src/app/features/game-view/win-screen/win-screen.component.scss
@@ -6,7 +6,7 @@
     position: absolute;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 2000;    
+    z-index: 20000;    
     animation-duration: 2s;
     animation-name: ease-in;
     animation-timing-function: ease-in;
